Changing files being shown in git command bar

--- a/Normalise.ipynb
+++ b/Normalise.ipynb
@@ -11,9 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import scipy.io as scio\n",
@@ -41,9 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import skimage.restoration as sr\n",
@@ -67,18 +63,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Setting the directories\n",
     "import os\n",
     "\n",
     "# wanted_folder = 'alldata/'\n",
-    "# wanted_folder = 'pruned/'\n",
+    "wanted_folder = 'pruned/'\n",
     "# wanted_folder = 'Atrium/'\n",
-    "wanted_folder = 'Ventricle/'\n",
+    "# wanted_folder = 'Ventricle/'\n",
     "\n",
     "cwd = os.getcwd()\n",
     "cwd = cwd + '/datasets-24-aug/OCTData/'+wanted_folder\n",
@@ -88,9 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "current_folder = cwd + 'whole_raw_image/'\n",
@@ -106,9 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def list_all_files(directory):\n",
@@ -122,9 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "filenames = list_all_files(current_folder)\n",
@@ -134,21 +122,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# unwanted_files = ['con_H1_N01848_LV_1_194.tif','con_H1_N01848_LV_1_300.tif','con_H2_N02047_LVS_1_400.tif','con_H2_N02047_LVS_1_420.tif','con_H3_N02186_LVS_1_265.tif','con_H3_N02186_RV_1_270.tif','con_H3_N02186_RV_1_400.tif','con_H4_N03210_LV_1_400.tif','con_H4_N03210_RV_1_390.tif','con_H4_N03210_RV_1_400.tif','con_H5_N03290_LV_1_420.tif','con_H6_N03320_LVS_1_455.tif','con_H6_N03320_LV_1_404.tif','con_H6_N03320_RA_1_420.tif','con_H8_N03585_RA_1_345.tif']\n",
-    "# unwanted_files = ['.DS_Store'] # making filenames without .DS_store"
+    "unwanted_files = ['.DS_Store'] # making filenames without .DS_store"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def get_info(filenames, root, ext):\n",
@@ -175,9 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "raw_images = get_info(filenames, current_folder, '.tif')\n",
@@ -187,9 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(len(raw_images))\n",
@@ -200,9 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(cwd)"
@@ -211,49 +189,45 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "mean_image = np.mean(raw_images, axis=0)\n",
     "plt.imshow(mean_image)\n",
     "name = cwd + wanted_folder.replace('/','')+'_mean_image.png'\n",
-    "print(name)\n",
-    "imsave(name, mean_image)"
+    "# print(name)\n",
+    "# imsave(name, mean_image)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "plt.imshow(raw_images[0])"
+    "std_image = np.std(raw_images, axis=0)\n",
+    "plt.imshow(std_image)\n",
+    "name = cwd + wanted_folder.replace('/','')+'_stddev_image.png'\n",
+    "# print(name)\n",
+    "# imsave(name, mean_image)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "normalisedimages = []\n",
-    "normalised_images = raw_images - mean_image\n",
+    "normalised_images = (raw_images - mean_image)\n",
     "print(normalised_images.shape)\n",
-    "plt.imshow(normalised_images[3])"
+    "plt.imshow(normalised_images[0])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(cwd)"
@@ -262,14 +236,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "for item in range(len(normalised_images)):\n",
     "    name = filenames[item]\n",
-    "    normalised_file = cwd + 'normalised_raw_image/'+ name\n",
+    "    normalised_file = cwd + 'std_norm_raw_image/'+ name\n",
     "    \n",
     "    # Saving files\n",
     "    imsave(normalised_file, normalised_images[item])"
@@ -278,9 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
