--- a/scores.ipynb
+++ b/scores.ipynb
@@ -101,6 +101,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ensuring only test set is used\n",
+    "# Creating list of file names\n",
+    "new_file_list = []\n",
+    "\n",
+    "for i in filenames:\n",
+    "    if i[:4] == 'con_':\n",
+    "        string = i[4:]\n",
+    "        file_name = string[:19].replace('.','')\n",
+    "    new_file_list.append(file_name)\n",
+    "\n",
+    "new_file_list.sort()\n",
+    "test_set_images = []\n",
+    "test_set = [\"H1_N01848_LA_1_272\",\"H2_N02047_RVS_1_400\",\"H3_N02186_LA_1_400\",\"H3_N02186_LVS_1_676\",\"H4_N03210_RA_1_400\",\"H5_N03290_LV_1_420\",\"H6_N03320_LVS_1_400\",\"H6_N03320_LVS_1_455\",\"H7_N03555_LVS_1_306\",\"H7_N03555_RA_1_302\",\"H8_N03585_RVS_1_398\",\"H8_N03585_RA_1_345\",\"H9_N03857_LV_1_580\"]\n",
+    "for count, i in enumerate(new_file_list):\n",
+    "    if i in test_set:\n",
+    "        print(count,i)\n",
+    "        test_set_images.append(count)\n",
+    "print(test_set_images)\n",
+    "print(len(test_set), len(test_set_images))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -167,7 +194,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "folder_of_interest = 'Pruned/'\n",
+    "folder_of_interest = 'DataAug/'\n",
+    "# folder_of_interest = ''\n",
     "results_folder = os.getcwd() +'/results/' + folder_of_interest\n",
     "print (results_folder)"
    ]
@@ -179,19 +207,19 @@
    "outputs": [],
    "source": [
     "# For raw vs normalised \n",
-    "# chosen_result = np.load(results_folder + 'tf_nonnormalised_raw.npy')\n",
+    "# chosen_result = np.load(results_folder + 'tf_raw.npy')\n",
     "# chosen_result = np.load(results_folder + 'tf_normalised.npy')\n",
-    "# chosen_result = np.load(results_folder + 'tf_atrven_normalised.npy')\n",
-    "# chosen_result = np.load(results_folder + 'torch_nonnormalised_raw.npy')\n",
-    "# chosen_result = np.load(results_folder + 'torch_normalised.npy')\n",
-    "# chosen_result = np.load(results_folder + 'torch_atrven_normalised.npy')\n",
     "\n",
     "# Whole vs Pruned\n",
-    "# chosen_result = np.load(results_folder + 'tf_whole.npy')\n",
-    "# chosen_result = np.load(results_folder + 'tf_pruned.npy')\n",
-    "chosen_result = np.load(results_folder + 'torch_whole.npy')\n",
-    "print(np.unique(chosen_result[0]))\n",
-    "# chosen_result = np.load(results_folder + 'torch_pruned.npy')\n",
+    "# chosen_result = np.load(results_folder + 'tf_raw.npy')\n",
+    "# chosen_result = np.load(results_folder + 'tf_normalised.npy')\n",
+    "\n",
+    "# Whole vs Pruned\n",
+    "chosen_result = np.load(results_folder + 'tf_raw.npy')\n",
+    "# chosen_result = np.load(results_folder + 'tf_normalised.npy')\n",
+    "\n",
+    "# LR & Weights Best Model\n",
+    "# chosen_result = np.load(results_folder + 'torch_nonnormalised_raw.npy')\n",
     "print(chosen_result.shape)"
    ]
   },
@@ -203,74 +231,121 @@
    },
    "outputs": [],
    "source": [
+    "# acc_stats = []\n",
     "dice_stats = []\n",
     "avg_thickness_list = []\n",
     "err_thickness_list = []\n",
     "sqrerr_thickness_list = []\n",
-    "for i in range(len(filenames)):\n",
-    "    ind = i\n",
+    "# for i in range(len(test_set_images)):\n",
+    "for i in range(len(raw_images)):\n",
+    "    if i % 2 != 0:\n",
+    "#         ind = test_set_images[i]\n",
+    "        ind = i\n",
+    "        print(i)\n",
+    "        # Raw Test Image \n",
+    "        testing_image = raw_images[ind]\n",
+    "        test_label = manual_labels[ind]\n",
+    "        true_id = gnd_ids[ind]\n",
+    "        predicted_id = chosen_result[ind]\n",
     "\n",
-    "    # Raw Test Image \n",
-    "    testing_image = raw_images[ind]\n",
-    "    test_label = manual_labels[ind]\n",
-    "    true_id = gnd_ids[ind]\n",
-    "    predicted_id = chosen_result[ind]\n",
-    "    \n",
-    "    # Creating one hot encoding of true labels and predicted labels\n",
-    "    true_labels = list_of_labels(true_id,8)\n",
-    "    pred_labels = list_of_labels(predicted_id,8)\n",
-    "    \n",
-    "    # Making sure they're same shape\n",
-    "    th,tw,_ = true_labels.shape\n",
-    "    ph,pw,_ = pred_labels.shape\n",
-    "    true_labels = true_labels[:min(th,ph), :min(tw,pw), :]\n",
-    "    pred_labels = pred_labels[:min(th,ph), :min(tw,pw), :]\n",
-    "    \n",
-    "    stats = find_stats(true_labels, pred_labels)\n",
-    "    _,avg_pred_thickness_list,mean_abs_error_list, mean_squared_error_list, _ = thickness_metrics(true_labels,pred_labels)\n",
-    "    dice_stats.append(stats)\n",
-    "    avg_thickness_list.append(avg_pred_thickness_list)\n",
-    "    err_thickness_list.append(mean_abs_error_list)\n",
-    "    sqrerr_thickness_list.append(mean_squared_error_list)\n",
-    "    color = label_img_to_rgb(chosen_result[ind])\n",
-    "    \n",
-    "#     axis_name = filenames[ind][4:-4]\n",
-    "    \n",
-    "#     f, axs = plt.subplots(1,3,figsize=(20,20))\n",
-    "#     print(axis_name)\n",
-    "#     plt.suptitle(axis_name, size=14)\n",
-    "#     plt.subplots_adjust(top=1.58)\n",
-    "#     plt.subplot(131), plt.imshow(raw_images[ind], cmap = \"gray\")\n",
-    "#     plt.title('Raw OCT Image'), plt.xticks([]), plt.yticks([])\n",
-    "#     plt.subplot(132), plt.imshow(manual_labels[ind])\n",
-    "#     plt.title('Manually Labelled Image'), plt.xticks([]), plt.yticks([])\n",
-    "#     plt.subplot(133),plt.imshow(color)\n",
-    "#     plt.title('Automated Label'), plt.xticks([]), plt.yticks([])\n",
-    "    \n",
-    "    plt.show()\n",
+    "        # Creating one hot encoding of true labels and predicted labels\n",
+    "        true_labels = list_of_labels(true_id,8)\n",
+    "        pred_labels = list_of_labels(predicted_id,8)\n",
+    "\n",
+    "        # Making sure they're same shape\n",
+    "        th,tw,_ = true_labels.shape\n",
+    "        ph,pw,_ = pred_labels.shape\n",
+    "        true_labels = true_labels[:min(th,ph), :min(tw,pw), :]\n",
+    "        pred_labels = pred_labels[:min(th,ph), :min(tw,pw), :]\n",
+    "\n",
+    "        dice_stat, acc_stat = find_stats(true_labels, pred_labels)\n",
+    "        _,avg_pred_thickness_list,mean_abs_error_list, mean_squared_error_list, _ = thickness_metrics(true_labels,pred_labels)\n",
+    "        dice_stats.append(dice_stat)\n",
+    "    #     acc_stats.append(acc_stat)\n",
+    "        avg_thickness_list.append(avg_pred_thickness_list)\n",
+    "        err_thickness_list.append(mean_abs_error_list)\n",
+    "        sqrerr_thickness_list.append(mean_squared_error_list)\n",
+    "        color = label_img_to_rgb(chosen_result[ind])\n",
+    "\n",
+    "        axis_name = filenames[ind][4:-4]\n",
+    "        f, axs = plt.subplots(1,3,figsize=(20,20))\n",
+    "        print(axis_name)\n",
+    "        plt.suptitle(axis_name, size=14)\n",
+    "        plt.subplots_adjust(top=1.58)\n",
+    "        plt.subplot(131), plt.imshow(raw_images[ind], cmap = \"gray\")\n",
+    "        plt.title('Raw OCT Image'), plt.xticks([]), plt.yticks([])\n",
+    "        plt.subplot(132), plt.imshow(manual_labels[ind])\n",
+    "        plt.title('Manually Labelled Image'), plt.xticks([]), plt.yticks([])\n",
+    "        plt.subplot(133),plt.imshow(color)\n",
+    "        plt.title('Automated Label'), plt.xticks([]), plt.yticks([])\n",
+    "\n",
+    "        plt.show()\n",
     "\n",
     "dice_stats = np.asarray(dice_stats)\n",
+    "# acc_stats = np.asarray(acc_stats)\n",
     "avg_thickness_list = np.asarray(avg_thickness_list)\n",
     "err_thickness_list = np.asarray(err_thickness_list)\n",
     "sqrerr_thickness_list = np.asarray(sqrerr_thickness_list)\n",
     "\n",
     "layers = ['Void - Black', 'Myocardium - Red', 'Endocardium - Blue', 'Fibrosis - Purple', 'Fat - Green', 'Dense Collagen - Orange', 'Loose Collagen - Yellow', 'Smooth Muscle - Pink']\n",
     "\n",
-    "def get_layer_stats(input_list):\n",
+    "# def get_layer_stats(input_list):\n",
+    "#     averages = [0]\n",
+    "#     for i in range(1,8):\n",
+    "#     #     ii = np.isfinite(overall_stats[:,i])\n",
+    "#         ii = input_list[:,i] > 0.001\n",
+    "#         new_stats = input_list[:,i][ii]\n",
+    "#         if len(new_stats)>0:\n",
+    "#             best_val = np.argmax(new_stats)\n",
+    "#             print('Best_val is at index: ', best_val)\n",
+    "#         val = round(np.average(new_stats),3)\n",
+    "#         averages.append(val)\n",
+    "#         print('Label: {} {}, Average Score: {}'.format(i, layers[i],averages[i]))\n",
+    "#     print('Average Scores', np.around(averages,3))\n",
+    "#     print('Average Overall Score', np.average(averages[1:]))\n",
+    "    \n",
+    "\n",
+    "# # Dice Stats\n",
+    "# print('Dice Stats\\n')\n",
+    "# get_layer_stats(dice_stats)\n",
+    "# print()\n",
+    "# # Avg Thickness Stats\n",
+    "# print('Average Thickness Stats\\n')\n",
+    "# get_layer_stats(avg_thickness_list)\n",
+    "# print()\n",
+    "# # Mean Error Thickness Stat\n",
+    "# print('Absolute Error Stats\\n')\n",
+    "# get_layer_stats(err_thickness_list)\n",
+    "# print()\n",
+    "\n",
+    "def get_layer_stats2(input_list):\n",
     "    averages = [0]\n",
     "    for i in range(1,8):\n",
     "    #     ii = np.isfinite(overall_stats[:,i])\n",
-    "        ii = input_list[:,i] > 0.001\n",
+    "        ii = input_list[:,i] >= 0.00001\n",
     "        new_stats = input_list[:,i][ii]\n",
     "        if len(new_stats)>0:\n",
     "            best_val = np.argmax(new_stats)\n",
-    "            print('Best_val is at index: ', best_val)\n",
-    "        val = round(np.average(new_stats),3)\n",
+    "        val = round(np.average(new_stats),2)\n",
     "        averages.append(val)\n",
-    "        print('Label: {} {}, Average Score: {}'.format(i, layers[i],averages[i]))\n",
-    "    print('Average Scores', np.around(averages,3))\n",
-    "    print('Average Overall Score', np.average(averages[1:]))\n",
-    "    \n",
+    "    print('Average Scores', np.around(averages[1:],2))\n",
+    "\n",
+    "# # Acc Stats\n",
+    "# get_layer_stats2(acc_stats)\n",
+    "# Dice Stats\n",
+    "get_layer_stats2(dice_stats)\n",
+    "# Avg Thickness Stats\n",
+    "get_layer_stats2(avg_thickness_list)\n",
+    "# Mean Error Thickness Stat\n",
+    "get_layer_stats2(err_thickness_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Dice Stats\n",
     "print('Dice Stats\\n')\n",
     "get_layer_stats(dice_stats)\n",
@@ -282,28 +357,35 @@
     "# Mean Error Thickness Stat\n",
     "print('Absolute Error Stats\\n')\n",
     "get_layer_stats(err_thickness_list)\n",
-    "print()\n",
-    "# # Squared Error Thickness State\n",
-    "# print('Squared Error Stats\\n')\n",
-    "# get_layer_stats(sqrerr_thickness_list)\n",
-    "\n",
-    "def get_layer_stats2(input_list):\n",
-    "    averages = [0]\n",
-    "    for i in range(1,8):\n",
-    "    #     ii = np.isfinite(overall_stats[:,i])\n",
-    "        ii = input_list[:,i] > 0.001\n",
-    "        new_stats = input_list[:,i][ii]\n",
-    "        if len(new_stats)>0:\n",
-    "            best_val = np.argmax(new_stats)\n",
-    "        val = round(np.average(new_stats),2)\n",
-    "        averages.append(val)\n",
-    "    print('Average Scores', np.around(averages[1:],2))\n",
-    "# Dice Stats\n",
-    "get_layer_stats2(dice_stats)\n",
-    "# Avg Thickness Stats\n",
-    "get_layer_stats2(avg_thickness_list)\n",
-    "# Mean Error Thickness Stat\n",
-    "get_layer_stats2(err_thickness_list)"
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plotting Errors - use it for validation etc errors\n",
+    "from numpy import array\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import Dense\n",
+    "from matplotlib import pyplot\n",
+    "# prepare sequence\n",
+    "X = array([0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1.0])\n",
+    "# # create model\n",
+    "# model = Sequential()\n",
+    "# model.add(Dense(2, input_dim=1))\n",
+    "# model.add(Dense(1))\n",
+    "# model.compile(loss='mse', optimizer='adam', metrics=['mse', 'mae', 'mape', 'cosine'])\n",
+    "# # train model\n",
+    "# history = model.fit(X, X, epochs=500, batch_size=len(X), verbose=2)\n",
+    "# plot metrics\n",
+    "pyplot.plot(history.history['mean_squared_error'])\n",
+    "pyplot.plot(history.history['mean_absolute_error'])\n",
+    "pyplot.plot(history.history['mean_absolute_percentage_error'])\n",
+    "pyplot.plot(history.history['cosine_proximity'])\n",
+    "pyplot.show()"
    ]
   },
   {
