Added changes to train relaynet and tensorflow make prediction files

--- a/Resize_Whole_Data.ipynb
+++ b/Resize_Whole_Data.ipynb
@@ -52,19 +52,19 @@
     "        for k in range(y):\n",
     "            # NOTE: did weights based on bold from legend\n",
     "            if(image[j][k]==1): # 1 red - myocardium\n",
-    "                 w2 = 10 * value \n",
+    "                 w2 = 9 * value \n",
     "            elif(image[j][k] == 2): # blue - endocardium\n",
     "                 w2 = 10 * value\n",
     "            elif(image[j][k]== 3): # purple - fibrosis\n",
-    "                 w2 = 5 * value \n",
+    "                 w2 = 4 * value \n",
     "            elif(image[j][k] == 4): # green - fat\n",
-    "                 w2 = 10 * value\n",
+    "                 w2 = 11 * value\n",
     "            elif(image[j][k]== 5): # orange - dense collagen\n",
     "                 w2 = 5 * value\n",
     "            elif(image[j][k]== 6): # yellow - loose collagen\n",
     "                 w2 = 5 * value\n",
     "            elif(image[j][k]== 7):\n",
-    "                 w2 = 5 * value # magenta - smooth muscle\n",
+    "                 w2 = 6 * value # magenta - smooth muscle\n",
     "            else:\n",
     "                 w2 = 0\n",
     "            if(j!=0 and j!=x-1):\n",
@@ -118,8 +118,8 @@
     "# Setting the directories\n",
     "import os\n",
     "\n",
-    "wanted_folder = 'alldata/'\n",
-    "# wanted_folder = 'pruned/'\n",
+    "# wanted_folder = 'alldata/'\n",
+    "wanted_folder = 'pruned/'\n",
     "# wanted_folder = 'Atrium/'\n",
     "# wanted_folder = 'Ventricle/'\n",
     "\n",
