--- a/Sim_Run_Relaynet.ipynb
+++ b/Sim_Run_Relaynet.ipynb
@@ -615,7 +615,7 @@
    "outputs": [],
    "source": [
     "# Settings for segmentation\n",
-    "seg_test = np.squeeze(test_data.T)\n",
+    "seg_test = np.squeeze(test_data)\n",
     "height, width = seg_test.shape\n",
     "left_bound = 0\n",
     "right_bound = width\n",
@@ -629,7 +629,7 @@
     "get_segmented_image(seg_test, height, width, left_bound, right_bound, split, Ny, Nx)\n",
     "\n",
     "# Show other images\n",
-    "show_data(test_data, show_legend=False, transpose=True)"
+    "show_data(test_data, show_legend=False, transpose=False)"
    ]
   },
   {
