--- a/tensorflow_make_predictions.ipynb
+++ b/tensorflow_make_predictions.ipynb
@@ -49,6 +49,8 @@
     "from keras.layers import Lambda \n",
     "from keras.utils import to_categorical\n",
     "import tensorflow as tf\n",
+    "from keras.callbacks import History \n",
+    "history = History()\n",
     "\n",
     "from keras.layers import Reshape\n",
     "\n",
@@ -104,7 +106,7 @@
     "weight_decay = 0.0001\n",
     "# Defines the input tensor\n",
     "inputs = Input(shape=(h,w,1))\n",
-    "k,s = 3,3\n",
+    "k,s = 5,5\n",
     "L1 = Conv2D(64,kernel_size=(k,s),padding = \"same\",kernel_regularizer=regularizers.l2(weight_decay))(inputs)\n",
     "L2 = BatchNormalization()(L1)\n",
     "L2 = Activation('relu')(L2)\n",
@@ -166,8 +168,8 @@
     "# Setting the directories\n",
     "import os\n",
     "\n",
-    "wanted_folder = 'alldata/'\n",
-    "# wanted_folder = 'pruned/'\n",
+    "# wanted_folder = 'alldata/'\n",
+    "wanted_folder = 'pruned/'\n",
     "# wanted_folder = 'Atrium/'\n",
     "# wanted_folder = 'Ventricle/'\n",
     "\n",
@@ -210,10 +212,10 @@
    "source": [
     "# Normalised Result\n",
     "# result_sub_folder = \"/Normalised/\"\n",
-    "# saved_name = 'raw_bs_0.01_ep_40'\n",
+    "# saved_name = 'raw_bs_40_ep_150'\n",
     "# filenames, raw_images = get_data(cwd+'whole_raw_image','.tif')\n",
     "# save_name = results_folder + result_sub_folder + 'tf_' + 'raw'+ '.npy'\n",
-    "# saved_name = 'normalised_bs_7_ep_40'\n",
+    "# saved_name = 'normalised_bs_40_ep_150'\n",
     "# filenames, raw_images = get_data(cwd+'normalised_raw_image','.png')\n",
     "# save_name = results_folder + result_sub_folder + 'tf_' + 'normalised'+ '.npy'\n",
     "\n",
@@ -226,53 +228,42 @@
     "# filenames, raw_images = get_data(cwd+'normalised_raw_image','.png')\n",
     "# save_name = results_folder + result_sub_folder + 'tf_' + 'normalised'+ '.npy'\n",
     "\n",
-    "# Augmented\n",
-    "result_sub_folder = \"/DataAug/\"\n",
-    "# saved_name = 'pruned_raw_bs_40_ep_200'\n",
-    "# filenames, raw_images = get_data(cwd+'whole_raw_image','.tif')\n",
-    "# save_name = results_folder + result_sub_folder + 'tf_' + 'raw'+ '.npy'\n",
-    "saved_name = 'pruned_normalised_bs_40_ep_200'\n",
+    "# KS\n",
+    "# result_sub_folder = \"/Kernel/\"\n",
+    "# saved_name = 'ks55_bs_40_ep_200'\n",
+    "# filenames, raw_images = get_data(cwd+'normalised_raw_image','.png')\n",
+    "# save_name = results_folder + result_sub_folder + 'tf_' + 'ks_55'+ '.npy'\n",
+    "# saved_name = 'ks44_bs_40_ep_150'\n",
+    "# save_name = results_folder + result_sub_folder + 'tf_' + 'ks_44'+ '.npy'\n",
+    "\n",
+    "# Weights\n",
+    "# result_sub_folder = \"/Weights/\"\n",
+    "# saved_name = 'p4r8g11mag6bs_40_ep_150'\n",
+    "# filenames, raw_images = get_data(cwd+'normalised_raw_image','.png')\n",
+    "# save_name = results_folder + result_sub_folder + 'tf_' + 'weight'+ '.npy'\n",
+    "\n",
+    "# LR\n",
+    "# result_sub_folder = \"/LR/\"\n",
+    "# saved_name = 'lr002_bs_40_ep_150'\n",
+    "# filenames, raw_images = get_data(cwd+'normalised_raw_image','.png')\n",
+    "# save_name = results_folder + result_sub_folder + 'tf_' + 'lr_002'+ '.npy'\n",
+    "# saved_name = 'lr0025_bs_40_ep_150'\n",
+    "# filenames, raw_images = get_data(cwd+'normalised_raw_image','.png')\n",
+    "# save_name = results_folder + result_sub_folder + 'tf_' + 'lr_0025'+ '.npy'\n",
+    "\n",
+    "# Epochs\n",
+    "result_sub_folder = \"/Epochs/\"\n",
+    "# saved_name = 'normalised_bs_40_ep_80'\n",
+    "# filenames, raw_images = get_data(cwd+'normalised_raw_image','.png')\n",
+    "# save_name = results_folder + result_sub_folder + 'tf_' + 'normalised_bs_40_ep_80'+ '.npy'\n",
+    "saved_name = 'normalised_bs_40_ep_100'\n",
     "filenames, raw_images = get_data(cwd+'normalised_raw_image','.png')\n",
-    "# save_name = results_folder + result_sub_folder + 'tf_' + 'normalised'+ '.npy'\n",
-    "save_name = results_folder + '/Normalised/' + 'tf_' + 'normalised'+ '.npy'\n",
+    "save_name = results_folder + result_sub_folder + 'tf_' + 'normalised_bs_40_ep_100'+ '.npy'\n",
+    "\n",
     "\n",
     "mod = \"/models\"+result_sub_folder+saved_name+\".hdf5\"\n",
     "print(mod, save_name)\n",
-    "model.load_weights(check_directory+mod)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "print(len(raw_images))\n",
-    "print (raw_images[0].shape)\n",
-    "print(filenames[0])\n",
-    "plt.imshow(raw_images[0],cmap = \"gray\")\n",
-    "\n",
-    "# Creating list of file names\n",
-    "new_file_list = []\n",
-    "\n",
-    "for i in filenames:\n",
-    "    if i[:4] == 'con_':\n",
-    "        string = i[4:]\n",
-    "        file_name = string[:19].replace('.','')\n",
-    "    new_file_list.append(file_name)\n",
-    "\n",
-    "new_file_list.sort()\n",
-    "# print(new_file_list)\n",
-    "\n",
-    "test_set_images = []\n",
-    "test_set = [\"H1_N01848_LA_1_272\",\"H2_N02047_RVS_1_400\",\"H3_N02186_LA_1_400\",\"H3_N02186_LVS_1_676\",\"H4_N03210_RA_1_400\",\"H5_N03290_LV_1_420\",\"H6_N03320_LVS_1_400\",\"H6_N03320_LVS_1_455\",\"H7_N03555_LVS_1_306\",\"H7_N03555_RA_1_302\",\"H8_N03585_RVS_1_398\",\"H8_N03585_RA_1_345\",\"H9_N03857_LV_1_580\"]\n",
-    "for count, i in enumerate(new_file_list):\n",
-    "    if i in test_set:\n",
-    "#         print(count,i)\n",
-    "        test_set_images.append(count)\n",
-    "print(len(test_set_images))"
+    "x = model.load_weights(check_directory+mod)"
    ]
   },
   {
@@ -321,6 +312,33 @@
    "outputs": [],
    "source": [
     "print(stored_images.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "i = 1\n",
+    "\n",
+    "testing_image = raw_images[i]\n",
+    "h,w = testing_image.shape\n",
+    "testing_image = testing_image.reshape((1,h,w,1))\n",
+    "prediction = model.predict(testing_image)\n",
+    "prediction = np.squeeze(prediction,axis = 0)\n",
+    "prediction = np.reshape(prediction,(h,w,8))\n",
+    "predicted_id = np.zeros((h,w))\n",
+    "for k in range(h):\n",
+    "    for j in range(w):\n",
+    "        index = np.argmax(prediction[k][j]) # doing pixel wise prediction based on highest prob of class\n",
+    "        predicted_id[k][j] = index\n",
+    "\n",
+    "idxs = label_img_to_rgb(predicted_id)\n",
+    "plt.imshow(idxs)\n",
+    "plt.show()\n"
    ]
   },
   {
