--- a/1_Train_ReLayNet_TF.ipynb
+++ b/1_Train_ReLayNet_TF.ipynb
@@ -806,10 +806,10 @@
     "# named = \"models/Weights/p4r8g11mag6bs_{}_ep_{}\".format(bs,epoch)\n",
     "\n",
     "# Epochs Test\n",
-    "epoch=80\n",
+    "epoch=120\n",
     "named = \"models/Epochs/normalised_bs_{}_ep_{}\".format(bs,epoch)\n",
     "\n",
-    "# print(named)"
+    "print(named)"
    ]
   },
   {
