Test for denoised and atrium/ventricle images

--- a/1_Train_ReLayNet_TF.ipynb
+++ b/1_Train_ReLayNet_TF.ipynb
@@ -8,6 +8,18 @@
    },
    "outputs": [],
    "source": [
+    "from IPython.core.display import display, HTML\n",
+    "display(HTML(\"<style>.container { width:70% !important; }</style>\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
     "import scipy.io as scio\n",
     "import numpy as np    \n",
     "import matplotlib.pyplot as plt\n",
@@ -71,9 +83,9 @@
    },
    "outputs": [],
    "source": [
-    "gpu_options = tf.GPUOptions(per_process_gpu_memory_fraction=0.6)\n",
+    "gpu_options = tf.GPUOptions(per_process_gpu_memory_fraction=0.8)\n",
     "config = tf.ConfigProto()\n",
-    "config.gpu_options.allow_growth=True\n",
+    "# config.gpu_options.allow_growth=True\n",
     "\n",
     "# sess = tf.Session(config=tf.ConfigProto(gpu_options=gpu_options))\n",
     "\n",
@@ -267,8 +279,8 @@
     "import os\n",
     "\n",
     "# wanted_folder = 'alldata/'\n",
-    "wanted_folder = 'pruned/'\n",
-    "# wanted_folder = 'Atrium/'\n",
+    "# wanted_folder = 'pruned/'\n",
+    "wanted_folder = 'Atrium/'\n",
     "# wanted_folder = 'Ventricle/'\n",
     "\n",
     "cwd = os.getcwd()\n",
@@ -297,12 +309,21 @@
    "outputs": [],
    "source": [
     "# filenames, raw_images = get_data(cwd+'whole_raw_image/Train','.png')\n",
+    "\n",
+    "# Normalised\n",
     "filenames, raw_images = get_data(cwd+'normalised_raw_image/Train','.png')\n",
+    "\n",
+    "# Denoised\n",
+    "# filenames, raw_images = get_data(cwd+'normalised_brushlet_enhanced/Train','.png')\n",
+    "# filenames, raw_images = get_data(cwd+'normalised_brushlet_denoised/Train','.png')\n",
+    "# filenames, raw_images = get_data(cwd+'normalised_bm3d/Train','.png')\n",
+    "# filenames, raw_images = get_data(cwd+'normalised_nl_means/Train','.png')\n",
+    "# filenames, raw_images = get_data(cwd+'normalised_bilateral_filter/Train','.png')\n",
     "\n",
     "print(len(raw_images))\n",
     "print(filenames[128])\n",
     "print (raw_images[0].shape)\n",
-    "plt.imshow(raw_images[6],cmap = \"gray\")"
+    "plt.imshow(raw_images[2],cmap = \"gray\")"
    ]
   },
   {
@@ -793,7 +814,7 @@
    "source": [
     "lrs = [0.01]\n",
     "bs = 40\n",
-    "epoch = 150\n",
+    "epoch = 140\n",
     "\n",
     "# Normalised Test\n",
     "# named = \"models/Normalised/raw_bs_{}_ep_{}\".format(bs,epoch)\n",
@@ -806,8 +827,19 @@
     "# named = \"models/Weights/p4r8g11mag6bs_{}_ep_{}\".format(bs,epoch)\n",
     "\n",
     "# Epochs Test\n",
-    "epoch=120\n",
-    "named = \"models/Epochs/normalised_bs_{}_ep_{}\".format(bs,epoch)\n",
+    "# epoch=120\n",
+    "# named = \"models/Epochs/normalised_bs_{}_ep_{}\".format(bs,epoch)\n",
+    "\n",
+    "# Denoised Test\n",
+    "# named = \"models/Denoised/\"+\"brushlet_enhanced\"+\"_bs_{}_ep_{}\".format(bs,epoch)\n",
+    "# named = \"models/Denoised/\"+\"brushlet_denoised\"+\"_bs_{}_ep_{}\".format(bs,epoch)\n",
+    "# named = \"models/Denoised/\"+\"bm3d\"+\"_bs_{}_ep_{}\".format(bs,epoch)\n",
+    "# named = \"models/Denoised/\"+\"nl_means\"+\"_bs_{}_ep_{}\".format(bs,epoch)\n",
+    "# named = \"models/Denoised/\"+\"bilateal_filter\"+\"_bs_{}_ep_{}\".format(bs,epoch)\n",
+    "\n",
+    "# Denoised Test\n",
+    "named = \"models/Dataset/\"+\"atrium\"+\"_bs_{}_ep_{}\".format(bs,epoch)\n",
+    "# named = \"models/Dataset/\"+\"ventricle\"+\"_bs_{}_ep_{}\".format(bs,epoch)\n",
     "\n",
     "print(named)"
    ]
