--- a/Resize_Whole_Data.ipynb
+++ b/Resize_Whole_Data.ipynb
@@ -119,9 +119,9 @@
     "import os\n",
     "\n",
     "# wanted_folder = 'alldata/'\n",
-    "wanted_folder = 'pruned/'\n",
+    "# wanted_folder = 'pruned/'\n",
     "# wanted_folder = 'Atrium/'\n",
-    "# wanted_folder = 'Ventricle/'\n",
+    "wanted_folder = 'Ventricle/'\n",
     "\n",
     "cwd = os.getcwd()\n",
     "check_directory = cwd\n",
@@ -141,23 +141,56 @@
    },
    "outputs": [],
    "source": [
+    "# Raw Image\n",
     "whole_raw_image_folder = cwd + 'whole_raw_image/'\n",
     "brushlet_enhanced_folder = cwd + 'brushlet_enhanced/'\n",
     "brushlet_denoised_folder = cwd + 'brushlet_denoised/'\n",
+    "\n",
+    "# Labels\n",
     "manual_label_folder = cwd + 'manual_label/'\n",
     "all_labels_folder = cwd + 'all_labels/'\n",
     "sim_labels_folder = cwd + 'my_labels/'\n",
     "corrected_labels_folder = cwd + 'png_labels_method/'\n",
+    "\n",
+    "# Normalised Images\n",
     "normalised_folder = cwd + 'normalised_raw_image/'\n",
     "\n",
-    "list_of_folders = [whole_raw_image_folder, \\\n",
-    "                   brushlet_denoised_folder, \\\n",
-    "                   brushlet_enhanced_folder, \\\n",
-    "                   manual_label_folder, \\\n",
-    "                   all_labels_folder, \\\n",
-    "                   sim_labels_folder, \\\n",
-    "                   corrected_labels_folder, \\\n",
-    "                normalised_folder]\n",
+    "list_of_folders = [ whole_raw_image_folder, \\\n",
+    "                    brushlet_denoised_folder, \\\n",
+    "                    brushlet_enhanced_folder, \\\n",
+    "                    manual_label_folder, \\\n",
+    "                    all_labels_folder, \\\n",
+    "                    sim_labels_folder, \\\n",
+    "                    corrected_labels_folder, \\\n",
+    "                    normalised_folder\n",
+    "                  ]\n",
+    "\n",
+    "# Denoised Images\n",
+    "# brushlet_enhanced_folder = cwd + 'normalised_brushlet_enhanced/'\n",
+    "# brushlet_denoised_folder = cwd + 'normalised_brushlet_denoised/'\n",
+    "# bm3d_folder = cwd + 'normalised_bm3d/'\n",
+    "# nlm_folder = cwd + 'normalised_nl_means/'\n",
+    "# bilateral_folder = cwd + 'normalised_bilateral_filter/'\n",
+    "\n",
+    "# # Denoised Images\n",
+    "# brushlet_enhanced_folder = cwd + 'normalised_brushlet_enhanced/'\n",
+    "# brushlet_denoised_folder = cwd + 'normalised_brushlet_denoised/'\n",
+    "# bm3d_folder = cwd + 'normalised_bm3d/'\n",
+    "# nlm_folder = cwd + 'normalised_nl_means/'\n",
+    "# bilateral_folder = cwd + 'normalised_bilateral_filter/'\n",
+    "\n",
+    "# list_of_folders = [ whole_raw_image_folder, \\\n",
+    "#                     brushlet_denoised_folder, \\\n",
+    "#                     brushlet_enhanced_folder, \\\n",
+    "#                     manual_label_folder, \\\n",
+    "#                     all_labels_folder, \\\n",
+    "#                     sim_labels_folder, \\\n",
+    "#                     corrected_labels_folder, \\\n",
+    "#                     normalised_folder,  \\\n",
+    "#                     bm3d_folder,\\\n",
+    "#                     nlm_folder,\\\n",
+    "#                     bilateral_folder\n",
+    "#                   ]\n",
     "print(len(list_of_folders))\n",
     "def list_all_files(directory):\n",
     "    from os import listdir\n",
@@ -431,7 +464,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -457,6 +490,11 @@
     "    \n",
     "    normalised_folder_rem = normalised_folder + 'Train/'\n",
     "    \n",
+    "#     bm3d_folder_rem = bm3d_folder + 'Train/'\n",
+    "#     nlm_folder_rem = nlm_folder + 'Train/'\n",
+    "#     bilateral_folder_rem = bilateral_folder + 'Train/'\n",
+    "\n",
+    "    \n",
     "    remove_files(whole_raw_image_folder_rem, '.png')\n",
     "    remove_files(brushlet_enhanced_folder_rem, '.png')\n",
     "    remove_files(brushlet_denoised_folder_rem, '.png')\n",
@@ -467,7 +505,10 @@
     "    remove_files(sim_labels_folder_weights_rem, '.npy')\n",
     "    remove_files(corrected_labels_folder_ids_rem, '.npy')\n",
     "    remove_files(corrected_labels_folder_weights_rem, '.npy')\n",
-    "    remove_files(normalised_folder_rem, '.png')"
+    "    remove_files(normalised_folder_rem, '.png')\n",
+    "#     remove_files(bm3d_folder_rem, '.png')\n",
+    "#     remove_files(nlm_folder_rem, '.png')\n",
+    "#     remove_files(bilateral_folder_rem, '.png')"
    ]
   },
   {
@@ -499,50 +540,59 @@
     "man_lab_ext = '.JPG'\n",
     "everything_else_ext = '.png'\n",
     "\n",
-    "# Loop through images to determine whether their weights and they are looking correct\n",
-    "l_values = set()\n",
     "for i in range(len(files_list[0])):\n",
-    "# for i in range(1):\n",
-    "    # i not in the test set\n",
-    "#     if i not in unwanted_files:\n",
     "    if i % 2 == 0:\n",
     "        print(i)\n",
-    "        whole_raw = plt.imread(whole_raw_image_folder+files_list[0][i]) # whole raw image - needs to be segmented and saved\n",
-    "#         b_d = plt.imread(brushlet_denoised_folder+files_list[1][i]) # whole brushlet denoised image - needs to be segmented and saved\n",
-    "#         b_e = plt.imread(brushlet_enhanced_folder+files_list[2][i]) # whole brushlet enhanced image - needs to be segmented and saved\n",
-    "        man_lab = plt.imread(manual_label_folder+files_list[3][i]) # main_label (coloured) - needs to be segmented and saved\n",
-    "#         label = plt.imread(all_labels_folder+files_list[4][i]) # label (ids) - needs to be segmented and used to create weight\n",
-    "#         label = ((label*7)/np.max(values)).astype(int)\n",
+    "        whole_raw = plt.imread(whole_raw_image_folder+files_list[list_of_folders.index(whole_raw_image_folder)][i]) # whole raw image - needs to be segmented and saved\n",
     "        \n",
-    "        # Create my labels from manual labels\n",
-    "#         save_label(man_lab, sim_labels_folder, new_file_list[i])\n",
-    "#         sim_label = plt.imread(sim_labels_folder+files_list[5][i]) # label (ids) - needs to be segmented and used to create weight\n",
-    "\n",
-    "        correct_label = plt.imread(corrected_labels_folder+'label_'+new_file_list[i]+'_labels.png') # label (ids) - needs to be segmented and used to create weight\n",
+    "        # Labels\n",
+    "        man_lab = plt.imread(manual_label_folder+files_list[list_of_folders.index(manual_label_folder)][i]) # main_label (coloured) \n",
+    "        correct_label = plt.imread(corrected_labels_folder+'label_'+new_file_list[i]+'_labels.png') # label (ids) \n",
     "        correct_label = ((correct_label*7)/np.max(values)).astype(int)\n",
     "        \n",
+    "        # Denoised\n",
+    "#         b_d = plt.imread(brushlet_denoised_folder+files_list[list_of_folders.index(brushlet_denoised_folder)][i]) # whole brushlet denoised image \n",
+    "#         b_e = plt.imread(brushlet_enhanced_folder+files_list[list_of_folders.index(brushlet_enhanced_folder)][i]) # whole brushlet enhanced image\n",
+    "#         bm3d = plt.imread(bm3d_folder+files_list[list_of_folders.index(bm3d_folder)][i]) # bm3d image \n",
+    "#         nlm = plt.imread(nlm_folder+files_list[list_of_folders.index(nlm_folder)][i]) # nlm image\n",
+    "#         bilateral = plt.imread(bilateral_folder+files_list[list_of_folders.index(bilateral_folder)][i]) # bilateral image \n",
+    "        \n",
+    "        # Normalised\n",
     "        normalised = plt.imread(normalised_folder+files_list[7][i])\n",
     "        \n",
-    "        # crop and save all files necessary\n",
+    "        #### crop and save all files necessary\n",
     "        crop_and_save_raw(whole_raw, whole_raw_image_folder, new_file_list[i])\n",
+    "        \n",
+    "        crop_and_save_raw(man_lab, manual_label_folder, new_file_list[i])\n",
+    "        crop_and_save_label(correct_label, corrected_labels_folder, new_file_list[i])\n",
+    "        \n",
+    "        # Create my labels from manual labels\n",
+    "        # label = plt.imread(all_labels_folder+files_list[4][i]) # label (ids) \n",
+    "        # label = ((label*7)/np.max(values)).astype(int)\n",
+    "        # save_label(man_lab, sim_labels_folder, new_file_list[i])\n",
+    "        # sim_label = plt.imread(sim_labels_folder+files_list[5][i]) # label (ids)\n",
+    "        # crop_and_save_label(label, all_labels_folder, new_file_list[i])\n",
+    "        # crop_and_save_label(sim_label, sim_labels_folder, new_file_list[i])\n",
+    "        \n",
+    "        \n",
+    "        crop_and_save_raw(normalised, normalised_folder, new_file_list[i])\n",
+    "        \n",
+    "        \n",
     "#         crop_and_save_raw(b_d, brushlet_denoised_folder, new_file_list[i])\n",
     "#         crop_and_save_raw(b_e, brushlet_enhanced_folder, new_file_list[i])\n",
-    "        crop_and_save_raw(man_lab, manual_label_folder, new_file_list[i])\n",
-    "#         crop_and_save_label(label, all_labels_folder, new_file_list[i])\n",
-    "#         crop_and_save_label(sim_label, sim_labels_folder, new_file_list[i])\n",
-    "        crop_and_save_label(correct_label, corrected_labels_folder, new_file_list[i])\n",
-    "    \n",
-    "        crop_and_save_raw(normalised, normalised_folder, new_file_list[i])\n",
+    "#         crop_and_save_raw(bm3d, bm3d_folder, new_file_list[i])\n",
+    "#         crop_and_save_raw(nlm, nlm_folder, new_file_list[i])\n",
+    "#         crop_and_save_raw(bilateral, bilateral_folder, new_file_list[i])\n",
     "\n",
-    "#         image_array = [whole_raw, b_d, b_e, man_lab, label]    \n",
-    "#         image_name = ['whole_raw_1', 'b_d_1', 'b_e_1', 'man_lab_1', 'label_1']\n",
+    "        # image_array = [b_d, b_e, bm3d, nlm, bilateral]    \n",
+    "        # image_name = ['b_d', 'b_e', 'bm3d', 'nlm', 'bilateral']\n",
     "\n",
-    "#         fig, axes = plt.subplots(nrows=1, ncols=5, figsize=(15,5))\n",
-    "#         fig.suptitle(new_file_list[i], size=14)\n",
-    "#         for j, ax in enumerate(axes):\n",
-    "#             ax.margins(0.05, 0.15)\n",
-    "#             ax.imshow(image_array[j])\n",
-    "#             ax.set_title(image_name[j])"
+    "        # fig, axes = plt.subplots(nrows=1, ncols=5, figsize=(15,5))\n",
+    "        # fig.suptitle(new_file_list[i], size=14)\n",
+    "        # for j, ax in enumerate(axes):\n",
+    "        #    ax.margins(0.05, 0.15)\n",
+    "        #    ax.imshow(image_array[j])\n",
+    "        #    ax.set_title(image_name[j])"
    ]
   },
   {
