--- a/tensorflow_make_predictions.ipynb
+++ b/tensorflow_make_predictions.ipynb
@@ -169,9 +169,9 @@
     "import os\n",
     "\n",
     "# wanted_folder = 'alldata/'\n",
-    "wanted_folder = 'pruned/'\n",
+    "# wanted_folder = 'pruned/'\n",
     "# wanted_folder = 'Atrium/'\n",
-    "# wanted_folder = 'Ventricle/'\n",
+    "wanted_folder = 'Ventricle/'\n",
     "\n",
     "cwd = os.getcwd()\n",
     "check_directory = cwd\n",
@@ -252,14 +252,47 @@
     "# save_name = results_folder + result_sub_folder + 'tf_' + 'lr_0025'+ '.npy'\n",
     "\n",
     "# Epochs\n",
-    "result_sub_folder = \"/Epochs/\"\n",
-    "# saved_name = 'normalised_bs_40_ep_80'\n",
+    "# result_sub_folder = \"/Epochs/\"\n",
     "# filenames, raw_images = get_data(cwd+'normalised_raw_image','.png')\n",
+    "# saved_name = 'normalised_bs_40_ep_80'\n",
     "# save_name = results_folder + result_sub_folder + 'tf_' + 'normalised_bs_40_ep_80'+ '.npy'\n",
-    "saved_name = 'normalised_bs_40_ep_100'\n",
-    "filenames, raw_images = get_data(cwd+'normalised_raw_image','.png')\n",
-    "save_name = results_folder + result_sub_folder + 'tf_' + 'normalised_bs_40_ep_100'+ '.npy'\n",
+    "# saved_name = 'normalised_bs_40_ep_100'\n",
+    "# save_name = results_folder + result_sub_folder + 'tf_' + 'normalised_bs_40_ep_100'+ '.npy'\n",
+    "# saved_name = 'normalised_bs_40_ep_120'\n",
+    "# save_name = results_folder + result_sub_folder + 'tf_' + 'normalised_bs_40_ep_120'+ '.npy'\n",
+    "# saved_name = 'normalised_bs_40_ep_140'\n",
+    "# save_name = results_folder + result_sub_folder + 'tf_' + 'normalised_bs_40_ep_140'+ '.npy'\n",
     "\n",
+    "# Denoised\n",
+    "# result_sub_folder = \"/Denoised/\"\n",
+    "\n",
+    "# filenames, raw_images = get_data(cwd+'normalised_brushlet_enhanced','.png')\n",
+    "# saved_name = 'brushlet_enhanced_bs_40_ep_140'\n",
+    "# save_name = results_folder + result_sub_folder + 'tf_' + 'normalised_brushlet_enhanced'+ '.npy'\n",
+    "\n",
+    "# filenames, raw_images = get_data(cwd+'normalised_brushlet_denoised','.png')\n",
+    "# saved_name = 'brushlet_denoised_bs_40_ep_140'\n",
+    "# save_name = results_folder + result_sub_folder + 'tf_' + 'normalised_brushlet_denoised'+ '.npy'\n",
+    "\n",
+    "# filenames, raw_images = get_data(cwd+'normalised_bm3d','.png')\n",
+    "# saved_name = 'bm3d_bs_40_ep_140'\n",
+    "# save_name = results_folder + result_sub_folder + 'tf_' + 'normalised_bm3d'+ '.npy'\n",
+    "\n",
+    "# filenames, raw_images = get_data(cwd+'normalised_nl_means','.png')\n",
+    "# saved_name = 'nl_means_bs_40_ep_140'\n",
+    "# save_name = results_folder + result_sub_folder + 'tf_' + 'normalised_nl_means'+ '.npy'\n",
+    "\n",
+    "# filenames, raw_images = get_data(cwd+'normalised_bilateral_filter','.png')\n",
+    "# saved_name = 'bilateral_filter_bs_40_ep_140'\n",
+    "# save_name = results_folder + result_sub_folder + 'tf_' + 'normalised_bilateral_filter'+ '.npy'\n",
+    "\n",
+    "# Pruned vs Atrium\n",
+    "result_sub_folder = \"/Dataset/\"\n",
+    "filenames, raw_images = get_data(cwd+'normalised_raw_image','.tif')\n",
+    "# saved_name = 'atrium_bs_40_ep_140'\n",
+    "# save_name = results_folder + result_sub_folder + 'tf_' + 'atrium'+ '.npy'\n",
+    "saved_name = 'ventricle_bs_40_ep_140'\n",
+    "save_name = results_folder + result_sub_folder + 'tf_' + 'ventricle'+ '.npy'\n",
     "\n",
     "mod = \"/models\"+result_sub_folder+saved_name+\".hdf5\"\n",
     "print(mod, save_name)\n",
