--- a/tensorflow_make_predictions.ipynb
+++ b/tensorflow_make_predictions.ipynb
@@ -169,9 +169,9 @@
     "import os\n",
     "\n",
     "# wanted_folder = 'alldata/'\n",
-    "# wanted_folder = 'pruned/'\n",
+    "wanted_folder = 'pruned/'\n",
     "# wanted_folder = 'Atrium/'\n",
-    "wanted_folder = 'Ventricle/'\n",
+    "# wanted_folder = 'Ventricle/'\n",
     "\n",
     "cwd = os.getcwd()\n",
     "check_directory = cwd\n",
@@ -287,15 +287,43 @@
     "# save_name = results_folder + result_sub_folder + 'tf_' + 'normalised_bilateral_filter'+ '.npy'\n",
     "\n",
     "# Pruned vs Atrium\n",
-    "result_sub_folder = \"/Dataset/\"\n",
-    "filenames, raw_images = get_data(cwd+'normalised_raw_image','.tif')\n",
+    "# result_sub_folder = \"/Dataset/\"\n",
+    "# filenames, raw_images = get_data(cwd+'normalised_raw_image','.tif')\n",
     "# saved_name = 'atrium_bs_40_ep_140'\n",
     "# save_name = results_folder + result_sub_folder + 'tf_' + 'atrium'+ '.npy'\n",
-    "saved_name = 'ventricle_bs_40_ep_140'\n",
-    "save_name = results_folder + result_sub_folder + 'tf_' + 'ventricle'+ '.npy'\n",
+    "# saved_name = 'ventricle_bs_40_ep_140'\n",
+    "# save_name = results_folder + result_sub_folder + 'tf_' + 'ventricle'+ '.npy'\n",
     "\n",
-    "mod = \"/models\"+result_sub_folder+saved_name+\".hdf5\"\n",
+    "# TL\n",
+    "result_sub_folder = \"/TL/\"\n",
+    "# filenames, raw_images = get_data(cwd+'normalised_raw_image','.tif')\n",
+    "\n",
+    "# saved_name = 'softmax_bs_60_ep_140'\n",
+    "# save_name = results_folder + result_sub_folder + 'tl_' + 'softmax'+ '.npy'\n",
+    "\n",
+    "# saved_name = '3lastconvs_conv2d__bs_40_ep_40_lr_0_001'\n",
+    "# save_name = results_folder + result_sub_folder + '3lastconvs_conv2d__bs_40_ep_40_lr_0_001'+ '.npy'\n",
+    "\n",
+    "# saved_name = 'last2convs_conv2d__bs_40_ep_40_lr_0_01'\n",
+    "# save_name = results_folder + result_sub_folder + 'last2convs_conv2d__bs_40_ep_40_lr_0_01'+ '.npy'\n",
+    "\n",
+    "# saved_name = 'last2convs_conv2d__bs_40_ep_40_lr_0_001'\n",
+    "# save_name = results_folder + result_sub_folder + 'last2convs_conv2d__bs_40_ep_40_lr_0_001'+ '.npy'\n",
+    "\n",
+    "# saved_name = 'lastconv_conv2d__bs_40_ep_40_lr_0_01'\n",
+    "# save_name = results_folder + result_sub_folder + 'lastconv_conv2d__bs_40_ep_40_lr_0_01'+ '.npy'\n",
+    "\n",
+    "# saved_name = 'lastconv_conv2d__bs_40_ep_40_lr_0_001'\n",
+    "# save_name = results_folder + result_sub_folder + 'lastconv_conv2d__bs_40_ep_40_lr_0_001'+ '.npy'\n",
+    "\n",
+    "filenames, raw_images = get_data(cwd+'normalised_raw_image','.png')\n",
+    "saved_name = 'bm3d_bs_40_ep_140'\n",
+    "save_name = results_folder + result_sub_folder + 'bm3d_normalised' + '_rawimages'+ '.npy'\n",
+    "mod = \"/models/\"+'Denoised/'+saved_name+\".hdf5\"\n",
+    "\n",
+    "# mod = \"/models\"+result_sub_folder+saved_name+\".hdf5\"\n",
     "print(mod, save_name)\n",
+    "print(mod)\n",
     "x = model.load_weights(check_directory+mod)"
    ]
   },
@@ -331,6 +359,7 @@
     "stored_images = np.asarray(stored_images)\n",
     "\n",
     "np.save(save_name,stored_images)\n",
+    "print('Saved!')\n",
     "# idxs = label_img_to_rgb(out)\n",
     "# plt.imshow(idxs)\n",
     "# plt.show()"
